[tool.poetry]
name = "DynamicObj"
version = "3.0.0"
description = "Fable compatible library supporting Dynamic Objects including inheritance in functional style."
authors = ["Kevin Schneider", "WhiteBlackGoose", "Heinrich Lukas Weil", "Timo Muehlhaus", "Kevin Frey", "David Zimmer"]
maintainers = ["Heinrich Lukas Weil", "Timo Muehlhaus", "Kevin Schneider"]
readme = "README.md"
repository = "https://github.com/CSBiology/DynamicObj"
keywords = ["Dynamic Object", "Fable", "FSharp", "Javascript", "Python"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"